# stm32-cmake-nanoprintf

./: .gitmodules  CMakeLists.txt  Makefile
cmake/: nanoprintf-config.cmake
src/: nanoprintf.c
